Fixed bug with extension-added divs being visible

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 
-div {
+.divv {
     margin: 10px auto;
     padding: 10px;
     background-color: #0D1F2D;
